# wax

./: .gitignore  pyproject.toml  setup.py
waxx-src/: pyproject.toml  setup.py
waxx-src/waxx/: __init__.py
waxx-src/waxx.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
waxx-src/waxx/_bat/: camera_mother.bat  detuning_plotter.bat  remote_control.bat  tray_launcher.bat
waxx-src/waxx/_bat/dashboard/: start_artiq_coreanalyzer_proxy.bat  start_artiq_dashboard_only.bat  start_moninj_proxy.bat
waxx-src/waxx/_bat/old/: als_gui.bat
waxx-src/waxx/_bat/watcher/: run_watcher_expt.bat
waxx-src/waxx/analysis/: __init__.py  misc_analysis.py  plotting_1d.py
waxx-src/waxx/analysis/fitting/: __init__.py  exponentials.py  fit.py  parabolic.py
waxx-src/waxx/analysis/image_processing/: __init__.py  compute_gaussian_cloud_params.py
waxx-src/waxx/base/: __init__.py  expt.py  monitor.py  scanner.py  scribe.py
waxx-src/waxx/base/sub/: scanner.py
waxx-src/waxx/config/: __init__.py  camera_id.py  camera_id_waxx.py  dac_id.py  data_vault.py  dds_id.py  dds_id_waxx.py  expt_params.py  ip.py  sampler_id.py  sampler_id_waxx.py  shuttler_id.py  shuttler_id_waxx.py  siglent_id.py  timeouts.py  ttl_id.py
waxx-src/waxx/control/: __init__.py  beat_lock.py  ethernet_relay.py  integrator.py  raman_beams.py
waxx-src/waxx/control/artiq/: DAC_CH.py  DDS.py  Grabber.py  Sampler_CH.py  Shuttler_CH.py  TTL.py  __init__.py  dummy_core.py
waxx-src/waxx/control/cameras/: __init__.py  andor.py  basler_usb.py  (+1 more)
waxx-src/waxx/util/: import_module_from_file.py  notifications.py
(+307 files in other folders)
