# pyproject.toml
[project]
name = "waxx"
version = "0.0.1"
description = "Default template for PDM package"
authors = [
    {name = "jpagett", email = "pagett.jared@gmail.com"},
    {name = "Jared Pagett", email = "pagett.jared@gmail.com"},
]
dependencies = []
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/ucsb-amo/wax-ucsb/waxx"
[tool.setuptools.packages.find]
where = ["."] # Look for packages in the current directory
[tool.pdm]
distribution = false
